working on Network.getMinimalCapacityIncreasement()